--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -504,6 +504,21 @@ msgctxt "#32139"
 msgid "HLG"
 msgstr ""
 
+#16x9/Variables.xml
+msgctxt "#31138"
+msgid "Mins"
+msgstr ""
+
+#16x9/Variables.xml
+msgctxt "#31142"
+msgid "pics"
+msgstr ""
+
+#16x9/Variables.xml
+msgctxt "#31143"
+msgid "pic"
+msgstr ""
+
 
 
 #: /16x9/Includes_Player.xml
@@ -581,7 +596,7 @@ msgid "Click for addon browser"
 msgstr ""
 
 
-#/16x9/FileManager.xml, /16x9/MusicPlaylistEditor.xml
+#/16x9/FileManager.xml, /16x9/MusicPlaylistEditor.xml /16x9/Variables.xml
 msgctxt "#31001"
 msgid "items"
 msgstr ""
@@ -602,7 +617,7 @@ msgid "songs"
 msgstr ""
 
 #16x9/MusicPlaylistEditor.xml
-msgctxt "#31138"
+msgctxt "#31140"
 msgid "song"
 msgstr ""
 
@@ -666,6 +681,77 @@ msgid "Muted"
 msgstr ""
 
 
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the video codec name
+msgctxt "#31600"
+msgid "Video codec"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the video resolution
+msgctxt "#31601"
+msgid "Video resolution"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the video aspect
+msgctxt "#31602"
+msgid "Video aspect"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the video bitrate
+msgctxt "#31603"
+msgid "Video bitrate"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the audio codec name
+msgctxt "#31604"
+msgid "Audio codec"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the number of audio channels
+msgctxt "#31605"
+msgid "Audio channels"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the audio bitrate
+msgctxt "#31606"
+msgid "Audio bitrate"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the screen resolution
+msgctxt "#31607"
+msgid "Screen resolution"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the system rendering speed
+msgctxt "#31608"
+msgid "System rendering speed"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the system CPU usage
+msgctxt "#31609"
+msgid "System CPU usage"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the media (metadata) info page
+msgctxt "#31610"
+msgid "Media"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+#. Label to show the system info page
+msgctxt "#31611"
+msgid "System"
+msgstr ""
 
 
 
@@ -674,14 +760,6 @@ msgstr ""
 
 
 
-msgctxt "#31140"
-msgid "-"
-
-msgctxt "#31142"
-msgid "Art"
-
-msgctxt "#31143"
-msgid "Notify"
 
 
 
