--- a/todo.txt
+++ b/todo.txt
@@ -2,21 +2,25 @@ BUGS
 - Focus lost after search > keyboard > cancel - does this happen in estuary?
 - smartplaylistrule focusing on id=14 -> Kodi bug?
 - gridview with settings open > multiart disappears
+- missing bookmark thumbnail - kodi bug? - https://forum.kodi.tv/showthread.php?tid=362080
 
 THINGS TO FIX
 - delay multiart on first load?
 - grid details delay on contentswitching
+- showcaseview artworkmask - fade when transparent dialog visible
+- mypictures - randomise 3_Second_Slideshow
+-playlist numbers jump on next song
 
 MAYBE?
 - Alignment of commondetails with breadcrumb label on Home
 - align buttons with panel?
 - prime studios
-- musicvisualisation - remove breadcrumb??
+- musicvisualisation
 - More variable size labels?
 
 Delayed info on videplayer like netflix - two info bars?
 dialogsubtitles update
-missing bookmark thumbnail
+
 seekbar pops up briefly after videobookmarks
 transparent background on musicinfo > play > add-on required (dialogconfirm)
 add playalbum to required
@@ -26,8 +30,7 @@ smartplaylist editor - delay on load, distribution of columns
 dialogpictureinfo focused color when X selected
 
 
-SettingsScreenCalibration
-myprograms
+SettingsScreenCalibratio
 dialogplayerprocessinfo
 New windows? Color picker etc
 PVR
