--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,24 @@
+Do I need these?
+<value condition="Skin.HasSetting(Widget5_Content_LatestAlbums) | Skin.HasSetting(Widget5_Content_RecentAlbums)">$LOCALIZE[31208]</value>
+<value condition="Skin.HasSetting(Widget5_View_Billboard)">$LOCALIZE[31207]</value>
+<value condition="Skin.HasSetting(Widget5_View_Showcase) + Skin.HasSetting(Widget5_Display_Fanart)">$LOCALIZE[31208]</value>
+
+
+Don't build individual groups
+By default, along with the main and submenu's, skin shortcuts will build skinshortcuts-group-[groupname]and skinshortcuts-group-alt-[groupname] to be used depending on whether you want visibility conditions.
+
+If you don't want these groups, you can tell Skin Shortcuts not to build them by including &amp;options=noGroups in your build command.
+
+Multiple options can be separated with a pipe - | - symbol.
+
+
+
+skin shortcuts for home background options
+skin shortcuts for custom widget
+
+SECONDARY LIST > ONE LIST WITH VARIABLE PATH
+
+
 BUGS
 - Focus lost after search > keyboard > cancel - does this happen in estuary?
 - smartplaylistrule focusing on id=14 -> Kodi bug?
@@ -13,6 +34,7 @@ THINGS TO FIX
 
 MAYBE?
 - Alignment of commondetails with breadcrumb label on Home
+Window.isactive(window) for nice fadeout?
 - align buttons with panel?
 - prime studios
 - musicvisualisation
