--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,12 @@
+multiart is tvshow on grid episode icons - tmdbhelper e.g. better call saul
+details/info widget support for moviedbhelper widgets
+move shutdown menu to skinshortcuts
+similar widget - mpaa rating
+arctic horizon playlists
+random widget
+thmdb helper - simiolar
+
+
 Do I need these?
 <value condition="Skin.HasSetting(Widget5_Content_LatestAlbums) | Skin.HasSetting(Widget5_Content_RecentAlbums)">$LOCALIZE[31208]</value>
 <value condition="Skin.HasSetting(Widget5_View_Billboard)">$LOCALIZE[31207]</value>
