--- a/todo.txt
+++ b/todo.txt
@@ -1,31 +1,22 @@
-multiart is tvshow on grid episode icons - tmdbhelper e.g. better call saul
-details/info widget support for moviedbhelper widgets
 move shutdown menu to skinshortcuts
-similar widget - mpaa rating
-arctic horizon playlists
-alignment of info flags seems off
-
+Widget settings - Sort order label doesn't go white when button selected
 SECONDARY LIST > ONE LIST WITH VARIABLE PATH
-
 
 BUGS
 - Focus lost after search > keyboard > cancel - does this happen in estuary?
+- focus lost when going back to home from infoscreen (path trace)
 - smartplaylistrule focusing on id=14 -> Kodi bug?
 - gridview with settings open > multiart disappears
 - missing bookmark thumbnail - kodi bug? - https://forum.kodi.tv/showthread.php?tid=362080
 
 THINGS TO FIX
 - delay multiart on first load?
-- grid details delay on contentswitching
 - showcaseview artworkmask - fade when transparent dialog visible
 - mypictures - randomise 3_Second_Slideshow
--playlist numbers jump on next song
 
 MAYBE?
 - Alignment of commondetails with breadcrumb label on Home
 Window.isactive(window) for nice fadeout?
-- align buttons with panel?
-- prime studios
 - musicvisualisation
 - More variable size labels?
 
@@ -35,7 +26,6 @@ dialogsubtitles update
 seekbar pops up briefly after videobookmarks
 transparent background on musicinfo > play > add-on required (dialogconfirm)
 add playalbum to required
-
 
 smartplaylist editor - delay on load, distribution of columns
 dialogpictureinfo focused color when X selected
@@ -63,11 +53,9 @@ gridview icons > poster to keyart transition
 
 
 
-buttonsvisible
 Status icons
 Dialoginfos - info line
 Busy spinner location on Widgets
-Window.Property(xmlfile)
 
 8030/8060 progress???
 8060 Gridview progress remaining episodes colordiffuse
@@ -170,15 +158,6 @@ progressbar grid alignment
 	<radiowidth></radiowidth>
 	<radioheight></radioheight>
 </include>
-
-
-
-
-
-
-
-
-
 
 
 path tracing on infoscreens
