--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -676,7 +676,6 @@ msgid "More"
 
 
 
-
 #/16x9/SmartPlaylistEditor.xml
 msgctxt "#31117"
 msgid "Match"
@@ -695,83 +694,119 @@ msgid "Direction"
 
 
 
+
 #/16x9/DialogVolumeBar.xml
 msgctxt "#31144"
 msgid "Muted"
 msgstr ""
 
 
+
+
 #: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the video codec name
-msgctxt "#31600"
-msgid "Video codec"
+msgctxt "#31613"
+msgid "PVR"
 msgstr ""
 
 #: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the video resolution
-msgctxt "#31601"
-msgid "Video resolution"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the video aspect
-msgctxt "#31602"
-msgid "Video aspect"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the video bitrate
-msgctxt "#31603"
-msgid "Video bitrate"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the audio codec name
-msgctxt "#31604"
-msgid "Audio codec"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the number of audio channels
-msgctxt "#31605"
-msgid "Audio channels"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the audio bitrate
-msgctxt "#31606"
-msgid "Audio bitrate"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the screen resolution
-msgctxt "#31607"
-msgid "Screen resolution"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the system rendering speed
-msgctxt "#31608"
-msgid "System rendering speed"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the system CPU usage
-msgctxt "#31609"
-msgid "System CPU usage"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the media (metadata) info page
 msgctxt "#31610"
 msgid "Media"
 msgstr ""
 
 #: /xml/DialogPlayerProcessInfo.xml
-#. Label to show the system info page
 msgctxt "#31611"
+msgid "Player"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31612"
 msgid "System"
 msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31604"
+msgid "Video codec"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31607"
+msgid "Video resolution"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31608"
+msgid "Video aspect ratio"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31609"
+msgid "Audio codec"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31605"
+msgid "Audio channels"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31606"
+msgid "Audio bitrate"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31600"
+msgid "Memory"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31601"
+msgid "CPU"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31602"
+msgid "Video decoder"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31603"
+msgid "Pixel format"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31603"
+msgid "Pixel format"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31614"
+msgid "Screen resolution"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31615"
+msgid "System rendering speed"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31616"
+msgid "System memory usage"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31617"
+msgid "System CPU usage"
+msgstr ""
+
+
+
+
+
+
+
+
+
+
 
 
 
