--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -17,21 +17,281 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 
-#: Generic
+
+#: C
+
+#: Common
 msgctxt "#31115"
 msgid "[COLOR copacetic_accent_color]/[/COLOR]"
 
-#: Generic
+#: Common
 msgctxt "#31116"
 msgid "[B][COLOR copacetic_accent_color]/[/COLOR][/B]"
 
-#: Generic
+#: Common
 msgctxt "#31130"
 msgid "[COLOR copacetic_accent_color]‹[/COLOR]"
 
-#: Generic
+#: Common
 msgctxt "#31131"
 msgid "[COLOR copacetic_accent_color]›[/COLOR]"
+
+
+
+
+#: D
+
+#: /16x9/DialogButtonMenu.xml
+msgctxt "#31209"
+msgid "Night"
+msgstr ""
+
+#: /16x9/DialogButtonMenu.xml
+msgctxt "#31210"
+msgid "Light"
+msgstr ""
+
+#: /16x9/DialogButtonMenu.xml
+msgctxt "#31211"
+msgid "Home"
+msgstr ""
+
+#: /16x9/DialogButtonMenu.xml
+msgctxt "#31212"
+msgid "Sign out"
+msgstr ""
+
+#: /16x9/DialogButtonMenu.xml
+msgctxt "#31214"
+msgid "Sleep"
+msgstr ""
+
+#: /16x9/DialogButtonMenu.xml
+msgctxt "#31215"
+msgid "Restart"
+msgstr ""
+
+#: /16x9/DialogButtonMenu.xml
+msgctxt "#31216"
+msgid "Power"
+msgstr ""
+
+
+
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31613"
+msgid "PVR"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31610"
+msgid "Media"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31611"
+msgid "Player"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31612"
+msgid "System"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31604"
+msgid "Video codec"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31607"
+msgid "Video resolution"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31608"
+msgid "Video aspect ratio"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31609"
+msgid "Audio codec"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31605"
+msgid "Audio channels"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31606"
+msgid "Audio bitrate"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31600"
+msgid "Memory"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31601"
+msgid "CPU"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31602"
+msgid "Video decoder"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31603"
+msgid "Pixel format"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31603"
+msgid "Pixel format"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31614"
+msgid "Screen resolution"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31615"
+msgid "System rendering speed"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31616"
+msgid "System memory usage"
+msgstr ""
+
+#: /xml/DialogPlayerProcessInfo.xml
+msgctxt "#31617"
+msgid "System CPU usage"
+msgstr ""
+
+
+
+
+#: /xml/DialogSeekBar.xml
+msgctxt "#31148"
+msgid "Rated"
+msgstr ""
+
+
+
+
+#/16x9/DialogVolumeBar.xml
+msgctxt "#31144"
+msgid "Muted"
+msgstr ""
+
+
+
+
+#: F
+
+#/16x9/FileManager.xml, /16x9/MusicPlaylistEditor.xml /16x9/Variables.xml
+msgctxt "#31001"
+msgid "items"
+msgstr ""
+
+#/16x9/FileManager.xml, /16x9/MusicPlaylistEditor.xml
+msgctxt "#31000"
+msgid "item"
+msgstr ""
+
+
+
+
+#: I
+
+#: /16x9/Includes_Player.xml
+msgctxt "#31526"
+msgid "Pause"
+msgstr ""
+
+#: /16x9/Includes_Player.xml
+msgctxt "#31527"
+msgid "Album"
+msgstr ""
+
+#: /16x9/Includes_Player.xml
+msgctxt "#31528"
+msgid "Stop"
+msgstr ""
+
+#: /16x9/Includes_Player.xml
+msgctxt "#31529"
+msgid "Fullscreen"
+msgstr ""
+
+
+
+#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
+msgctxt "#31226"
+msgid "Continue watching"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
+msgctxt "#31227"
+msgid "Next up"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
+msgctxt "#31228"
+msgid "Latest movies"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
+msgctxt "#31229"
+msgid "Latest TV shows"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
+msgctxt "#31145"
+msgid "Random movies"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
+msgctxt "#31146"
+msgid "Random TV shows"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
+msgctxt "#31230"
+msgid "Latest albums"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
+msgctxt "#31231"
+msgid "Recently played albums"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
+msgctxt "#31147"
+msgid "Random albums"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
+msgctxt "#31150"
+msgid "Custom"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml
+msgctxt "#31067"
+msgid "Event log"
+msgstr ""
+
+#: /16x9/Includes_Settings.xml
+msgctxt "#31068"
+msgid "Current settings level:"
+msgstr ""
+
 
 
 
@@ -197,47 +457,104 @@ msgid "Disabled"
 msgstr ""
 
 
+
+
+#: L
+
+#/16x9/LoginScreen.xml
+msgctxt "#31100"
+msgid "Who's watching?"
+
+#/16x9/LoginScreen.xml
+msgctxt "#31101"
+msgid "Good evening!"
+
+#/16x9/LoginScreen.xml
+msgctxt "#31102"
+msgid "Good afternoon!"
+
+#/16x9/LoginScreen.xml
+msgctxt "#31103"
+msgid "Good morning!"
+
+
+
+
+#: M
+
+#: /16x9/MusicOSD.xml
+msgctxt "#31560"
+msgid "Playlist"
+msgstr ""
+
+#: /16x9/MusicOSD.xml
+msgctxt "#31561"
+msgid "Rewind"
+msgstr ""
+
+#: /16x9/MusicOSD.xml
+msgctxt "#31562"
+msgid "Forward"
+msgstr ""
+
+#: /16x9/MusicOSD.xml
+msgctxt "#31563"
+msgid "Rating"
+msgstr ""
+
+
+
+
+#16x9/MusicPlaylistEditor.xml
+msgctxt "#31136"
+msgid "No items"
+msgstr ""
+
+#16x9/MusicPlaylistEditor.xml
+msgctxt "#31137"
+msgid "songs"
+msgstr ""
+
+#16x9/MusicPlaylistEditor.xml
+msgctxt "#31140"
+msgid "song"
+msgstr ""
+
+#16x9/MusicPlaylistEditor.xml
+msgctxt "#31139"
+msgid "No songs added"
+msgstr ""
+
+
+
+
+#: /16x9/MusicVisualisation.xml
+msgctxt "#31564"
+msgid "Now playing..."
+msgstr ""
+
+
+
+
+#: S
+
+#: /16x9/SettingsCategory.xml
+msgctxt "#31016"
+msgid "Settings level"
+msgstr ""
+
+#/16x9/SettingsCategory.xml
+msgctxt "#31104"
+msgid "Click for addon browser"
+msgstr ""
+
+
+
+
 #: /16x9/SkinSettings.xml
 msgctxt "#31200"
 msgid "Copacetic"
 msgstr ""
-
-#: /16x9/DialogButtonMenu.xml
-msgctxt "#31209"
-msgid "Night"
-msgstr ""
-
-#: /16x9/DialogButtonMenu.xml
-msgctxt "#31210"
-msgid "Light"
-msgstr ""
-
-#: /16x9/DialogButtonMenu.xml
-msgctxt "#31211"
-msgid "Home"
-msgstr ""
-
-#: /16x9/DialogButtonMenu.xml
-msgctxt "#31212"
-msgid "Sign out"
-msgstr ""
-
-#: /16x9/DialogButtonMenu.xml
-msgctxt "#31214"
-msgid "Sleep"
-msgstr ""
-
-#: /16x9/DialogButtonMenu.xml
-msgctxt "#31215"
-msgid "Restart"
-msgstr ""
-
-#: /16x9/DialogButtonMenu.xml
-msgctxt "#31216"
-msgid "Power"
-msgstr ""
-
-
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31220"
@@ -376,68 +693,27 @@ msgstr ""
 
 
 
-#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
-msgctxt "#31226"
-msgid "Continue watching"
-msgstr ""
 
-#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
-msgctxt "#31227"
-msgid "Next up"
-msgstr ""
+#/16x9/SmartPlaylistEditor.xml
+msgctxt "#31117"
+msgid "Match"
 
-#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
-msgctxt "#31228"
-msgid "Latest movies"
-msgstr ""
+#/16x9/SmartPlaylistEditor.xml
+msgctxt "#31118"
+msgid "Limit"
 
-#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
-msgctxt "#31229"
-msgid "Latest TV shows"
-msgstr ""
+#/16x9/SmartPlaylistEditor.xml
+msgctxt "#31119"
+msgid "Sort"
 
-#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
-msgctxt "#31145"
-msgid "Random movies"
-msgstr ""
-
-#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
-msgctxt "#31146"
-msgid "Random TV shows"
-msgstr ""
-
-#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
-msgctxt "#31230"
-msgid "Latest albums"
-msgstr ""
-
-#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
-msgctxt "#31231"
-msgid "Recently played albums"
-msgstr ""
-
-#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
-msgctxt "#31147"
-msgid "Random albums"
-msgstr ""
-
-#: /16x9/Includes_Settings.xml, /16x9/Includes_Widgets.xml, /16x9/Variables_Widgets.xml
-msgctxt "#31150"
-msgid "Custom"
-msgstr ""
-
-#: /16x9/Includes_Settings.xml
-msgctxt "#31067"
-msgid "Event log"
-msgstr ""
-
-#: /16x9/Includes_Settings.xml
-msgctxt "#31068"
-msgid "Current settings level:"
-msgstr ""
+#/16x9/SmartPlaylistEditor.xml
+msgctxt "#31120"
+msgid "Direction"
 
 
 
+
+#: V
 
 #: /16x9/Variables.xml
 msgctxt "#32000"
@@ -541,52 +817,6 @@ msgstr ""
 
 
 
-#: /16x9/Includes_Player.xml
-msgctxt "#31526"
-msgid "Pause"
-msgstr ""
-
-#: /16x9/Includes_Player.xml
-msgctxt "#31527"
-msgid "Album"
-msgstr ""
-
-#: /16x9/Includes_Player.xml
-msgctxt "#31528"
-msgid "Stop"
-msgstr ""
-
-#: /16x9/Includes_Player.xml
-msgctxt "#31529"
-msgid "Fullscreen"
-msgstr ""
-
-#: /16x9/MusicOSD.xml
-msgctxt "#31560"
-msgid "Playlist"
-msgstr ""
-
-#: /16x9/MusicOSD.xml
-msgctxt "#31561"
-msgid "Rewind"
-msgstr ""
-
-#: /16x9/MusicOSD.xml
-msgctxt "#31562"
-msgid "Forward"
-msgstr ""
-
-#: /16x9/MusicOSD.xml
-msgctxt "#31563"
-msgid "Rating"
-msgstr ""
-
-#: /16x9/MusicVisualisation.xml
-msgctxt "#31564"
-msgid "Now playing..."
-msgstr ""
-
-
 
 #: /16x9/VideoOSDBookmarks.xml
 msgctxt "#31530"
@@ -605,198 +835,19 @@ msgstr ""
 
 
 
-#: /16x9/SettingsCategory.xml
-msgctxt "#31016"
-msgid "Settings level"
-msgstr ""
 
-#/16x9/SettingsCategory.xml
-msgctxt "#31104"
-msgid "Click for addon browser"
-msgstr ""
-
-
-#/16x9/FileManager.xml, /16x9/MusicPlaylistEditor.xml /16x9/Variables.xml
-msgctxt "#31001"
-msgid "items"
-msgstr ""
-
-#/16x9/FileManager.xml, /16x9/MusicPlaylistEditor.xml
-msgctxt "#31000"
-msgid "item"
-msgstr ""
-
-#16x9/MusicPlaylistEditor.xml
-msgctxt "#31136"
-msgid "No items"
-msgstr ""
-
-#16x9/MusicPlaylistEditor.xml
-msgctxt "#31137"
-msgid "songs"
-msgstr ""
-
-#16x9/MusicPlaylistEditor.xml
-msgctxt "#31140"
-msgid "song"
-msgstr ""
-
-#16x9/MusicPlaylistEditor.xml
-msgctxt "#31139"
-msgid "No songs added"
-msgstr ""
-
-
-#/16x9/LoginScreen.xml
-msgctxt "#31100"
-msgid "Who's watching?"
-
-#/16x9/LoginScreen.xml
-msgctxt "#31101"
-msgid "Good evening!"
-
-#/16x9/LoginScreen.xml
-msgctxt "#31102"
-msgid "Good afternoon!"
-
-#/16x9/LoginScreen.xml
-msgctxt "#31103"
-msgid "Good morning!"
-
-
-
-#/16x9/Includes_Widgets.xml
+#: W
+#/16x9/Widget_Templates.xml
 msgctxt "#31113"
 msgid "More from Season"
 
-#/16x9/Includes_Widgets.xml
+#/16x9/Widget_Templates.xml
 msgctxt "#31114"
 msgid "More"
 
 
 
 
-#/16x9/SmartPlaylistEditor.xml
-msgctxt "#31117"
-msgid "Match"
-
-#/16x9/SmartPlaylistEditor.xml
-msgctxt "#31118"
-msgid "Limit"
-
-#/16x9/SmartPlaylistEditor.xml
-msgctxt "#31119"
-msgid "Sort"
-
-#/16x9/SmartPlaylistEditor.xml
-msgctxt "#31120"
-msgid "Direction"
-
-
-
-
-#/16x9/DialogVolumeBar.xml
-msgctxt "#31144"
-msgid "Muted"
-msgstr ""
-
-
-
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31613"
-msgid "PVR"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31610"
-msgid "Media"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31611"
-msgid "Player"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31612"
-msgid "System"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31604"
-msgid "Video codec"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31607"
-msgid "Video resolution"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31608"
-msgid "Video aspect ratio"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31609"
-msgid "Audio codec"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31605"
-msgid "Audio channels"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31606"
-msgid "Audio bitrate"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31600"
-msgid "Memory"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31601"
-msgid "CPU"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31602"
-msgid "Video decoder"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31603"
-msgid "Pixel format"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31603"
-msgid "Pixel format"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31614"
-msgid "Screen resolution"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31615"
-msgid "System rendering speed"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31616"
-msgid "System memory usage"
-msgstr ""
-
-#: /xml/DialogPlayerProcessInfo.xml
-msgctxt "#31617"
-msgid "System CPU usage"
-msgstr ""
 
 
 
@@ -811,19 +862,6 @@ msgstr ""
 
 
 
-
-
-
-
-
-
-
-
-
-
-msgctxt "#31148"
-msgid "Selected"
-msgstr ""
 
 msgctxt "#31149"
 msgid "Button"
@@ -846,12 +884,6 @@ msgstr ""
 msgctxt "#31154"
 msgid "Auto-Update On"
 msgstr ""
-
-
-
-#Conq labels
-
-
 
 msgctxt "#31002"
 msgid "Tag"
