--- a/todo.txt
+++ b/todo.txt
@@ -13,6 +13,7 @@ THINGS TO FIX
 - delay multiart on first load?
 - showcaseview artworkmask - fade when transparent dialog visible
 - mypictures - randomise 3_Second_Slideshow
+gridview overlay disappears when play then back. Switch back to separate layer?
 
 MAYBE?
 - Alignment of commondetails with breadcrumb label on Home
@@ -31,14 +32,12 @@ SettingsScreenCalibratio
 New windows? Color picker etc
 PVR
 global search
-CUSTOM WIDGETS
 sort letters
 
 
 nested instead of blank includes
 simple listicon?
 dialogconfirm no focus at start
-Info_Label - logic based on fuullscreen info
 Delay content on Load for media windows
 Music_Player_Content_Fade_Animation???
 Constants and one-off animations
