--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,9 @@
-move shutdown menu to skinshortcuts
+addon list text on light background. Info scrollbar on light background (addoninfo)
+gridviewdetailsfade
+keyboard Layout
+toggle buttons alt states?
+info more from studio widget
+reset  widgets to default button
 Widget settings - Sort order label doesn't go white when button selected
 SECONDARY LIST > ONE LIST WITH VARIABLE PATH
 
