--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,15 @@
+smartplaylistrule - browse icon color when not Selected
+smartplaylistrule > dialogselect > buttons are wrong
 addon list text on light background. Info scrollbar on light background (addoninfo)
 gridviewdetailsfade
 keyboard Layout
 toggle buttons alt states?
-info more from studio widget
 reset  widgets to default button
 Widget settings - Sort order label doesn't go white when button selected
 SECONDARY LIST > ONE LIST WITH VARIABLE PATH
+smartplaylist editor - delay on load, distribution of columns
+dialogpictureinfo focused color when X selected
+
 
 BUGS
 - Focus lost after search > keyboard > cancel - does this happen in estuary?
@@ -29,16 +33,12 @@ Window.isactive(window) for nice fadeout?
 transparent background on musicinfo > play > add-on required (dialogconfirm)
 add playalbum to required
 
-smartplaylist editor - delay on load, distribution of columns
-dialogpictureinfo focused color when X selected
 
-
-SettingsScreenCalibratio
+SettingsScreenCalibration
 New windows? Color picker etc
-PVR
 global search
 sort letters
-
+PVR and games
 
 nested instead of blank includes
 simple listicon?
