--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -845,7 +845,10 @@ msgid "More from Season"
 msgctxt "#31114"
 msgid "More"
 
-
+#/16x9/Widget_Templates.xml
+msgctxt "#31149"
+msgid "Most played"
+msgstr ""
 
 
 
