--- a/todo.txt
+++ b/todo.txt
@@ -1,65 +1,56 @@
-smartplaylistrule - browse icon color when not Selected
-smartplaylistrule > dialogselect > buttons are wrong
-addon list text on light background. Info scrollbar on light background (addoninfo)
-gridviewdetailsfade
-keyboard Layout
-toggle buttons alt states?
-reset  widgets to default button
-Widget settings - Sort order label doesn't go white when button selected
-SECONDARY LIST > ONE LIST WITH VARIABLE PATH
-smartplaylist editor - delay on load, distribution of columns
-dialogpictureinfo focused color when X selected
+THINGS TO FIX
+- now playing shadow grid is white
+- smartplaylistrule - browse icon color when not Selected
+- smartplaylistrule > dialogselect > buttons are wrong
+- addon list text on light background. Info scrollbar on light background (addoninfo)
+- gridviewdetailsfade
+- keyboard Layout button fade out?
+- keyboard toggle buttons alt states?
+- reset  widgets to default button
+- Widget settings - Sort order label doesn't go white when button selected
+- SECONDARY LIST > ONE LIST WITH VARIABLE PATH
+- smartplaylist editor - delay on load, distribution of columns
+- dialogpictureinfo focused color when X selected
+- delay multiart on first load?
+- showcaseview artworkmask - fade when transparent dialog visible
+- mypictures - randomise 3_Second_Slideshow
+- gridview overlay disappears when play then back. Switch back to separate layer?
 
 
 BUGS
+- Delay opening new windows
+- dialogconfirm no focus at start
 - Focus lost after search > keyboard > cancel - does this happen in estuary?
 - focus lost when going back to home from infoscreen (path trace)
 - smartplaylistrule focusing on id=14 -> Kodi bug?
 - gridview with settings open > multiart disappears
 - missing bookmark thumbnail - kodi bug? - https://forum.kodi.tv/showthread.php?tid=362080
 
-THINGS TO FIX
-- delay multiart on first load?
-- showcaseview artworkmask - fade when transparent dialog visible
-- mypictures - randomise 3_Second_Slideshow
-gridview overlay disappears when play then back. Switch back to separate layer?
 
-MAYBE?
+TO DO
 - Alignment of commondetails with breadcrumb label on Home
-Window.isactive(window) for nice fadeout?
 - musicvisualisation
 - More variable size labels?
-
-transparent background on musicinfo > play > add-on required (dialogconfirm)
-add playalbum to required
-
-
-SettingsScreenCalibration
-New windows? Color picker etc
-global search
-sort letters
-PVR and games
+- transparent background on musicinfo > play > add-on required (dialogconfirm)
+- add playalbum to required
+- SettingsScreenCalibration
+- New windows? Color picker etc
+- global search
+- sort letters
+- PVR and games
 
 nested instead of blank includes
-simple listicon?
-dialogconfirm no focus at start
 Delay content on Load for media windows
 Music_Player_Content_Fade_Animation???
 Constants and one-off animations
 includes for settings screen repetition - nested for extra bits?
 player status icons redo
 gridview icons > poster to keyart transition
-
-
-
 Status icons
 Dialoginfos - info line
 Busy spinner location on Widgets
-
 8030/8060 progress???
-8060 Gridview progress remaining episodes colordiffuse
 4501 Order
-sets infowidget order
 progressbar grid alignment
 
 
