--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -557,19 +557,39 @@ msgid "Copacetic"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
+msgctxt "#31149"
+msgid "Menus"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
 msgctxt "#31220"
-msgid "Customise menu shortcuts"
+msgid "Configure home menu"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31151"
+msgid "Configure shutdown menu"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31221"
-msgid "Reset menu shortcuts"
+msgid "Reset all menu items"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31238"
-msgid "Enable widgets"
+msgid "Enable home widgets"
 msgstr "
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31152"
+msgid "Reset all home widgets"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31153"
+msgid "Are you sure you want to reset all home widgets back to default?"
+msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31219"
@@ -866,23 +886,15 @@ msgstr ""
 
 
 
-msgctxt "#31149"
-msgid "Button"
-msgstr ""
 
 
 
-msgctxt "#31151"
-msgid "HEADING"
-msgstr ""
 
-msgctxt "#31152"
-msgid "Reset all"
-msgstr ""
 
-msgctxt "#31153"
-msgid "Auto-Update Off"
-msgstr ""
+
+
+
+
 
 msgctxt "#31154"
 msgid "Auto-Update On"
