--- a/todo.txt
+++ b/todo.txt
@@ -77,14 +77,17 @@ MINUS LISTICON: 1.28
 2022-08-21 16:14:49.956 T:13536   DEBUG <general>: CGUIMediaWindow::GetDirectory (videodb://movies/titles/)
 
 THINGS TO FIX
-check list and billboardviews
+timings of multifades
+grid delay details a bit lomger
+secondary list mask - ghosting
+listview - ticks on secondary_list items watched
 breadcrumb overlay
 secondary-list
 Thumbnail_Fallback_Background_Color
 season fanart on infocscreen
-gridview shadow on light fanart right column go back and forth and sometimes it shows in edge
 nowplaying icon alignment on billboard (previously had bottom=10) and in common_layout - use nested slide to position?
 nowplaying icon - only one needed on billboard
+trailers?
 
 skinsettings choose interval - show value in label
 Info scrollbar on light background
