--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,16 @@ HiddenFocusButton
 Multiart_Setter
 Multiart_Resetter
 
+
+1.45 - ALL
+---
+0.006 - Just standard controls
+0.114 - Everything except Myviews_Main
+0.293 - Everything minus View includes
+0.622 - Everything minus View includes, plus strip > 0.329 for StripView load
+0.543 - Everything minus VIew includes, plus list > 0.25 for List
+
+
 NEW LISTICON AND NEW STATIC_ARTWORK
 ALL: 1.481
 2022-08-27 00:58:03.901 T:28208   DEBUG <general>: ------ Window Init (MyVideoNav.xml) ------
