--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -40,6 +40,18 @@ msgid "[COLOR copacetic_accent_color]›[/COLOR]"
 
 
 #: D
+#/16x9/DialogAddonInfo.xml
+msgctxt "#31002"
+msgid "Auto-Update On"
+msgstr ""
+
+#/16x9/DialogAddonInfo.xml
+msgctxt "#31003"
+msgid "Auto-Update Off"
+msgstr ""
+
+
+
 
 #: /16x9/DialogButtonMenu.xml
 msgctxt "#31209"
@@ -862,6 +874,11 @@ msgctxt "#31113"
 msgid "More from Season"
 
 #/16x9/Widget_Templates.xml
+msgctxt "#31154"
+msgid "Episodes from Season"
+msgstr ""
+
+#/16x9/Widget_Templates.xml
 msgctxt "#31114"
 msgid "More"
 
@@ -882,31 +899,6 @@ msgstr ""
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-msgctxt "#31154"
-msgid "Auto-Update On"
-msgstr ""
-
-msgctxt "#31002"
-msgid "Tag"
-msgstr ""
-
-msgctxt "#31003"
-msgid "Look"
-msgstr ""
 
 msgctxt "#31004"
 msgid "Layout"
