--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,16 @@ HiddenFocusButton
 Multiart_Setter
 Multiart_Resetter
 
+similar genre > artists
+
+<onload condition="System.HasAddon(plugin.video.themoviedb.helper)">RunScript(plugin.video.themoviedb.helper,split_value=$INFO[ListItem.Genre],property=GenreSplit)</onload>
+<onload condition="System.HasAddon(plugin.video.themoviedb.helper)">RunScript(plugin.video.themoviedb.helper,split_value=$INFO[ListItem.Writer],property=WriterSplit)</onload>
+<onload condition="System.HasAddon(plugin.video.themoviedb.helper)">RunScript(plugin.video.themoviedb.helper,split_value=$INFO[ListItem.Studio],property=StudioSplit)</onload>
+<onunload>ClearProperty(GenreSplit.0,home)</onunload>
+<onunload>ClearProperty(WriterSplit.0,home)</onunload>
+<onunload>ClearProperty(WriterSplit.1,home)</onunload>
+<onunload>ClearProperty(StudioSplit.0,home)</onunload>
+
 
 1.45 - ALL
 ---
@@ -10,7 +20,7 @@ Multiart_Resetter
 0.114 - Everything except Myviews_Main
 0.293 - Everything minus View includes
 0.622 - Everything minus View includes, plus strip > 0.329 for StripView load
-0.543 - Everything minus VIew includes, plus list > 0.25 for List
+0.543 - Everything minus View includes, plus list > 0.25 for List
 
 
 NEW LISTICON AND NEW STATIC_ARTWORK
