--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -889,40 +889,49 @@ msgstr ""
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-msgctxt "#31004"
-msgid "Layout"
-msgstr ""
-
-msgctxt "#31005"
-msgid "Scrollbars"
-msgstr ""
-
-msgctxt "#31006"
-msgid "Overlays"
-msgstr ""
-
+#/16x9/Widget_Variables.xml
 msgctxt "#31007"
-msgid "System music files"
+msgid "More"
 msgstr ""
 
-msgctxt "#31008"
-msgid "Current selected"
+#/16x9/Widget_Variables.xml
+msgctxt "#31004"
+msgid "More from"
 msgstr ""
 
+#/16x9/Widget_Variables.xml
+msgctxt "#31005"
+msgid "More soundtracks"
+msgstr ""
+
+#/16x9/Widget_Variables.xml
 msgctxt "#31009"
-msgid "Open playlist"
+msgid "Similar"
 msgstr ""
+
+#/16x9/Widget_Variables.xml
+msgctxt "#31008"
+msgid "Similar artists"
+msgstr ""
+
+#/16x9/Widget_Variables.xml
+msgctxt "#31006"
+msgid "Similar albums"
+msgstr ""
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 msgctxt "#31010"
 msgid "Save playlist"
