--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,10 @@
+{"rules":{"and":[{"field":"genre","operator":"contains","value":[AAA]},{"field":"mpaarating","operator":"contains","value":["BBB"]},{"field":"title","operator":"isnot","value":[CCC]}]},"type":"tvshows"}
+
+similar albums
+localise LABELS
+infowidget actions
+
+
 UNSUPPORTED CONTROLS
 HiddenFocusButton
 Multiart_Setter
@@ -5,14 +12,9 @@ Multiart_Resetter
 
 similar genre > artists
 
-<onload condition="System.HasAddon(plugin.video.themoviedb.helper)">RunScript(plugin.video.themoviedb.helper,split_value=$INFO[ListItem.Genre],property=GenreSplit)</onload>
-<onload condition="System.HasAddon(plugin.video.themoviedb.helper)">RunScript(plugin.video.themoviedb.helper,split_value=$INFO[ListItem.Writer],property=WriterSplit)</onload>
-<onload condition="System.HasAddon(plugin.video.themoviedb.helper)">RunScript(plugin.video.themoviedb.helper,split_value=$INFO[ListItem.Studio],property=StudioSplit)</onload>
-<onunload>ClearProperty(GenreSplit.0,home)</onunload>
-<onunload>ClearProperty(WriterSplit.0,home)</onunload>
-<onunload>ClearProperty(WriterSplit.1,home)</onunload>
-<onunload>ClearProperty(StudioSplit.0,home)</onunload>
 
+Updated Progressbar and removed some embuary Widgets
+0.879 - ALL
 
 1.45 - ALL
 ---
@@ -97,11 +99,9 @@ MINUS LISTICON: 1.28
 2022-08-21 16:14:49.956 T:13536   DEBUG <general>: CGUIMediaWindow::GetDirectory (videodb://movies/titles/)
 
 
-secondary list mask - ghosting
+
 listview - ticks on secondary_list items watched
-breadcrumb overlay
 secondary-list
-Thumbnail_Fallback_Background_Color
 season fanart on infocscreen
 nowplaying icon alignment on billboard (previously had bottom=10) and in common_layout - use nested slide to position?
 nowplaying icon - only one needed on billboard
