--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -655,7 +655,7 @@ msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31251"
-msgid "Choose refresh interval..."
+msgid "Refresh interval"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
@@ -883,7 +883,7 @@ msgctxt "#31114"
 msgid "More"
 
 #/16x9/Widget_Templates.xml
-msgctxt "#31149"
+msgctxt "#31010"
 msgid "Most played"
 msgstr ""
 
@@ -925,17 +925,6 @@ msgstr ""
 
 
 
-
-
-
-
-
-
-
-
-msgctxt "#31010"
-msgid "Save playlist"
-msgstr ""
 
 msgctxt "#31011"
 msgid "Close playlist"
@@ -1035,10 +1024,6 @@ msgstr ""
 
 msgctxt "#31044"
 msgid "Local subtitle found!"
-msgstr ""
-
-msgctxt "#31045"
-msgid "Supplied by"
 msgstr ""
 
 msgctxt "#31046"
