--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -1,4 +1,4 @@
-# Kodi Media Center language file
+  # Kodi Media Center language file
 # Addon Name: Copacetic
 # Addon id: skin.copacetic
 # Addon Provider: QuizKid
@@ -42,12 +42,12 @@ msgid "[COLOR copacetic_accent_color]›[/COLOR]"
 #: D
 #/16x9/DialogAddonInfo.xml
 msgctxt "#31002"
-msgid "Auto-Update On"
+msgid "Auto-update on"
 msgstr ""
 
 #/16x9/DialogAddonInfo.xml
 msgctxt "#31003"
-msgid "Auto-Update Off"
+msgid "Auto-update off"
 msgstr ""
 
 
