--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+
 Control.SetVisible() / Control.SetHidden() builtins
 
 
@@ -9,6 +10,18 @@ Multiart_Resetter
 secondary-list
 powerbutton menu
 global search / actor search
+musicvisualisation
+global search
+PVR and games
+playing icons
+toggle icons on virtualkeyboard
+Delay content on Load for media windows
+Constants and one-off animations
+includes for settings screen repetition - nested for extra bits?
+gridview icons > poster to keyart transition
+Status icons
+Busy spinner location on Widgets
+set order - mcu 3 (thor first in video?)
 
 BUGS
 - Delay opening new windows
@@ -18,24 +31,6 @@ BUGS
 - smartplaylistrule focusing on id=14 -> Kodi bug?
 - gridview with settings open > multiart disappears
 - missing bookmark thumbnail - kodi bug? - https://forum.kodi.tv/showthread.php?tid=362080
-
-
-TO DO
-- musicvisualisation
-- global search
-- PVR and games
-- playing icons
-- toggle icons on virtualkeyboard
-
-
-Delay content on Load for media windows
-Constants and one-off animations
-includes for settings screen repetition - nested for extra bits?
-gridview icons > poster to keyart transition
-Status icons
-Busy spinner location on Widgets
-set order - mcu 3 (thor first in video?)
-
 
 CHECK
 - icons
