--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,16 @@
 
 Control.SetVisible() / Control.SetHidden() builtins
-
+skin timer autoplay trailer
 
 UNSUPPORTED CONTROLS
 HiddenFocusButton
 Multiart_Setter
 Multiart_Resetter
+
+
+
+Skin timer for multiart
+
 
 secondary-list
 powerbutton menu
@@ -26,11 +31,10 @@ set order - mcu 3 (thor first in video?)
 BUGS
 - Delay opening new windows
 - dialogconfirm no focus at start
-- Focus lost after search > keyboard > cancel - does this happen in estuary?
-- Focus los after keyboard closed on smartplaylisteditor
 - smartplaylistrule focusing on id=14 -> Kodi bug?
 - gridview with settings open > multiart disappears
 - missing bookmark thumbnail - kodi bug? - https://forum.kodi.tv/showthread.php?tid=362080
+
 
 CHECK
 - icons
