--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -639,6 +639,11 @@ msgid "Hide clock"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
+msgctxt "#31051"
+msgid "Extras"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
 msgctxt "#31239"
 msgid "Enable embedded lists"
 msgstr ""
@@ -722,6 +727,12 @@ msgstr ""
 msgctxt "#31242"
 msgid "Hide progress bar on pause screen"
 msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31052"
+msgid "Enable trailer autoplay"
+msgstr ""
+
 
 
 
@@ -1040,13 +1051,8 @@ msgstr ""
 
 
 
-msgctxt "#31051"
-msgid "Settings can be accessed from the Shutdown menu or by rebooting XBMC!"
-msgstr ""
 
-msgctxt "#31052"
-msgid "Rated"
-msgstr ""
+
 
 msgctxt "#31053"
 msgid "Hide submenu headings"
